@@ -30,3 +30,9 @@
   font-size: 9px;  
   font-weight: plain;
 }
+
+.FirePHPSidebar_Toolbar_Button {
+  font-family: Arial;
+  font-size: 12px;  
+  font-weight: plain;
+}
